--- a/RealTime.csproj
+++ b/RealTime.csproj
@@ -6,6 +6,8 @@
 
   <ItemGroup>
       <PackageReference Include="Azure.Storage.Blobs" Version="12.4.4" />
+      <PackageReference Include="Hangfire.AspNetCore" Version="1.7.12" />
+      <PackageReference Include="HangFire.Core" Version="1.7.12" />
       <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="3.1.4" />
       <PackageReference Include="Microsoft.AspNetCore.HttpOverrides" Version="2.2.0" />
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.4" />
@@ -22,6 +24,7 @@
     <PackageReference Include="Serilog.Enrichers.Process" Version="2.0.1" />
     <PackageReference Include="Serilog.Enrichers.Thread" Version="3.1.0" />
     <PackageReference Include="Serilog.Settings.Configuration" Version="3.1.0" />
+    <PackageReference Include="SixLabors.ImageSharp" Version="1.0.0" />
     
   </ItemGroup>
 </Project>
