pOST gress for everything

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -1,5 +1,5 @@
 { "ConnectionStrings":{
-    "SqlServerLocal": "Data Source=EXE;Initial Catalog=RealTimeDb;Integrated Security=True;MultipleActiveResultSets=true",
+    "DbServerLocal": "Server=localhost;Port=5432;Database=airlines;User Id=cacctuccjacc;Password=Klop9090;",
     "RedisCache":"localhost:6379"
 },
   "Logging": {
