--- a/RealTime.csproj
+++ b/RealTime.csproj
@@ -34,4 +34,8 @@
     <PackageReference Include="System.Text.RegularExpressions" Version="4.3.1" />
     
   </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
 </Project>
