moving from mysql to postgres

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -1,5 +1,5 @@
 { "ConnectionStrings":{
-    "DbServerLocal": "Server=localhost;Port=5432;Database=airlines;User Id=cacctuccjacc;Password=Klop9090;",
+    "DbServerLocal": "Server=localhost;Port=5432;Database=realtimedb;User Id=cacctuccjacc;Password=Klop9090;",
     "RedisCache":"localhost:6379"
 },
   "Logging": {
