--- a/RealTime.csproj
+++ b/RealTime.csproj
@@ -32,10 +32,12 @@
     <PackageReference Include="System.Net.Http" Version="4.3.4" />
     <PackageReference Include="System.Net.Security" Version="4.3.2" />
     <PackageReference Include="System.Text.RegularExpressions" Version="4.3.1" />
+    <PackageReference Include="UuidExtensions" Version="1.2.0" />
     
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Areas\Account\Models\" />
     <Folder Include="Migrations\" />
   </ItemGroup>
 </Project>
